Client using API, pushed to beta
